--- a/my-app/src/main/resources/application.yml
+++ b/my-app/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: ${JDBC_DATABASE_URL:jdbc:postgresql://localhost:5432/my-app}
+    url: ${JDBC_DATABASE_URL:jdbc:postgresql://172.28.0.11:5432/my-app}
     username: ${JDBC_DATABASE_USERNAME:postgres}
     password: ${JDBC_DATABASE_PASSWORD:postgres}
     hikari:
